--- a/soccer/index.html
+++ b/soccer/index.html
@@ -127,7 +127,7 @@
       <div class="container">
       	<div class="row">
 		  <div class="col-md-6 col-xs-12">
-		  	<div class="copyright">Copyright @ GO STREAM 4K | All rights reserved</div>
+		  	<div class="copyright">Copyright @ Fubo TV Network | All rights reserved</div>
 		  </div>
 		  <div class="col-md-6 col-xs-12">
 			<div class="footer__links d-flex justify-content-end">
@@ -416,7 +416,7 @@ $(function(){
 
    <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4607131,4,0,0,0,00010000']);
+_Hasync.push(['Histats.start', '1,4725661,4,0,0,0,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
 _Hasync.push(['Histats.track_hits', '']);
 (function() {
@@ -424,6 +424,6 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4607131&101" alt="web log free" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4725661&101" alt="web log free" border="0"></a></noscript>
 <!-- Histats.com  END  -->
 
