--- a/soccer/index.html
+++ b/soccer/index.html
@@ -24,7 +24,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
   </head>
-
+<script type='text/javascript' src='//pl18989497.highrevenuegate.com/ec/1a/0e/ec1a0ec797b0f0de91d35c38641f415d.js'></script>
   <body>
      
     <nav class="navbar navbar-expand-md navbar-dark bg-dark top_menu">
