--- a/soccer/reg.html
+++ b/soccer/reg.html
@@ -1,5 +1,3 @@
 <html>
-<!-- Mirrored from sundaynightfootballinfo.com/nfllive/register/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Dec 2020 10:01:57 GMT -->
-<body><META HTTP-EQUIV="Refresh" CONTENT="0;URL=https://www.56srts.com/scripts/un981c6l?a_aid=b59493f6&a_bid=8e9370ef"></body>
-<!-- Mirrored from sundaynightfootballinfo.com/nfllive/register/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Dec 2020 10:01:57 GMT -->
+<body><META HTTP-EQUIV="Refresh" CONTENT="0;URL=https://affcpatrk.com/link?id=645d28fc7907013a8c7fffd7&aff_sub=soccer 2023 Live"></body>
 </html>
