--- a/oktagon.html
+++ b/oktagon.html
@@ -1,4 +1,4 @@
 <script>
-ref="https://allsports24.co/rugby-world-cup-2023/?cm";
+ref="https://allsports24.co/go/oktagon/?cm";
 top.location.replace(ref);
 </script>
